# ChangeLog for sci-biology/gffutils
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gffutils-0.8.3 (12 Apr 2015)

  12 Apr 2015; Michael Schubert <mschu.dev@gmail.com> +gffutils-0.8.3.ebuild,
  +metadata.xml:
  sci-biology/gffutils: add gffutils