@@ -10,11 +10,12 @@ inherit distutils-r1
 
 DESCRIPTION="GFF and GTF file manipulation and interconversion"
 HOMEPAGE="https://pythonhosted.org/gffutils/"
-SRC_URI="https://github.com/daler/gffutils/archive/v${PV}.tar.gz"
+SRC_URI="https://github.com/daler/gffutils/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
+KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
-DEPEND="sci-biology/pyfaidx[${PYTHON_USEDEP}]"
-RDEPEND="${DEPEND}"
+RDEPEND="sci-biology/pyfaidx[${PYTHON_USEDEP}]"
+DEPEND="${RDEPEND}"
