@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Apr 2015; Justin Lecher <jlec@gentoo.org> gffutils-0.8.3.ebuild:
+  sci-biology/gffutils: Streamline ebuild
+
 *gffutils-0.8.3 (12 Apr 2015)
 
   12 Apr 2015; Michael Schubert <mschu.dev@gmail.com> +gffutils-0.8.3.ebuild,
